--- a/source/example/fibgui/CMakeLists.txt
+++ b/source/example/fibgui/CMakeLists.txt
@@ -92,7 +92,7 @@ target_link_libraries(${target}
     Qt5::Core
     Qt5::Gui
     Qt5::Widgets
-    ${META_PROJECT_NAME}::baselib
+    ${META_PROJECT_NAME}::engine
     ${META_PROJECT_NAME}::fiblib
 )
 
