--- a/source/example/CMakeLists.txt
+++ b/source/example/CMakeLists.txt
@@ -73,7 +73,7 @@ target_include_directories(${target}
 target_link_libraries(${target}
     PRIVATE
     ${DEFAULT_LIBRARIES}
-    ${META_PROJECT_NAME}::baselib
+    ${META_PROJECT_NAME}::engine
     ${META_PROJECT_NAME}::fiblib
 )
 
