--- a/source/tests/fiblib-test/CMakeLists.txt
+++ b/source/tests/fiblib-test/CMakeLists.txt
@@ -60,7 +60,7 @@ target_include_directories(${target}
 target_link_libraries(${target}
     PRIVATE
     ${DEFAULT_LIBRARIES}
-    ${META_PROJECT_NAME}::fiblib
+    ${META_PROJECT_NAME}::engine
     gmock-dev
 )
 
