--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 project(GoblinEngine)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+set(CXX_STANDARD_REQUIRED on)
+set(CMAKE_CXX_STANDARD 14)
 
 include(GenerateExportHeader)
 include(ExternalProject)
