Actually added Mustache to the CMake project

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -36,6 +36,7 @@ add_library(engine SHARED
 		source/deps/imgui/imgui.cpp
 
 		include/engine/utils/BitmaskOperators.hpp
+		include/engine/utils/Mustache.hpp
 		include/engine/utils/Json.hpp
 		include/engine/utils/Sol.hpp
 
