--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,4 @@
 # Created by .ignore support plugin (hsz.mobi)
-### CMake template
-CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Makefile
-cmake_install.cmake
-install_manifest.txt
-### Linux template
-*~
-
-# temporary files which can be created if a process still has a handle open of a deleted file
-.fuse_hidden*
-
-# KDE directory preferences
-.directory
-
-# Linux trash folder which might appear on any partition or disk
-.Trash-*
 ### C++ template
 # Compiled Object files
 *.slo
@@ -35,6 +17,7 @@ install_manifest.txt
 
 # Fortran module files
 *.mod
+*.smod
 
 # Compiled Static libraries
 *.lai
@@ -46,94 +29,34 @@ install_manifest.txt
 *.exe
 *.out
 *.app
-### Windows template
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
+### C template
+# Object files
+*.ko
+*.elf
 
-# Folder config file
-Desktop.ini
+# Precompiled Headers
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
+# Libraries
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
+# Shared objects (inc. Windows DLLs)
+*.so.*
 
-# Windows shortcuts
-*.lnk
-### OSX template
-.DS_Store
-.AppleDouble
-.LSOverride
+# Executables
+*.i*86
+*.x86_64
+*.hex
 
-# Icon must end with two \r
-Icon
+# Debug files
+*.dSYM/
+*.su
+### CMake template
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
 
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-### JetBrains template
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff:
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/dictionaries
-.idea/vcs.xml
-.idea/jsLibraryMappings.xml
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
-
-## File-based project format:
-*.iws
-
-## Plugin-specific files:
-
-# IntelliJ
-/out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-build
+/.idea/
+/build/
