Forgot the static define in the example's compilation unit

--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_executable(example MACOSX_BUNDLE
+add_executable(example MACOSX_BUNDLE WIN32
 		example.cpp)
 
 find_package(SDL2 REQUIRED)
@@ -8,4 +8,4 @@ target_compile_options(example
 		PRIVATE ${DEFAULT_COMPILE_OPTIONS})
 
 target_compile_definitions(example
-		PRIVATE ${DEFAULT_COMPILE_DEFINITIONS})
+		PRIVATE ${DEFAULT_COMPILE_DEFINITIONS} E_ABI_STATIC_engine)
